--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,7 +18,7 @@
         <log type="coverage-html" target="build/coverage" lowUpperBound="50" highLowerBound="90"/>
     </logging>
     <testsuites>
-        <testsuite name="lucenequery">
+        <testsuite name="askLucy">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
