--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=7.1.0"
+    },
+    "require-dev": {
         "phpunit/phpunit": " ^6.2"
     },
     "autoload": {
