--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "php": ">=7.1.0"
     },
     "require-dev": {
+        "infection/infection": "^0.7.0",
         "phpunit/phpunit": "^7"
     },
     "autoload": {
